@@ -3,6 +3,7 @@ package com.example.cms_backend.Security;
 import com.example.cms_backend.Model.Entities.Authority;
 import com.example.cms_backend.Model.Entities.User;
 import com.example.cms_backend.Repositories.UserRepository;
+import jakarta.transaction.Transactional;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -10,7 +11,6 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -22,34 +22,30 @@ public class CustomUserDetailsService implements UserDetailsService {
     }
 
     @Override
+    @Transactional
     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
-        User user = userRepository.findByEmail(email).get();
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new UsernameNotFoundException("User not found with email: " + email));
 
-        if (user.getEmail().isEmpty()) {
-            throw new UsernameNotFoundException("User not found with email: " + email);
-        }
+        // Extract roles and ensure they are prefixed with "ROLE_"
+        List<SimpleGrantedAuthority> grantedAuthorities = user.getRoles().stream()
+                .map(role -> new SimpleGrantedAuthority("ROLE_" + role.getName()))
+                .collect(Collectors.toList());
 
-        List<String> roles = user.getRoles().stream()
-                .map(role -> role.getName())  // "ADMIN" -> "ROLE_ADMIN"
-                .toList();
-
-        // Convert authorities (permissions) to a list of Strings
-        List<String> authorities = user.getAuthorities().stream()
-                .map(Authority::getName) // "VIEW_REPORTS"
-                .toList();
-
-        List<SimpleGrantedAuthority> grantedAuthorities =
-                roles.stream().map(SimpleGrantedAuthority::new).collect(Collectors.toList());
+        // Extract authorities (permissions)
         grantedAuthorities.addAll(
-                authorities.stream().map(SimpleGrantedAuthority::new).toList()
+                user.getAuthorities().stream()
+                        .map(authority -> new SimpleGrantedAuthority(authority.getName()))
+                        .collect(Collectors.toList())
         );
+
         System.out.println("Granted Authorities: " + grantedAuthorities);
-        //TODO: ADD ROLES AND AUTHORITIES
+
+
         return org.springframework.security.core.userdetails.User
                 .withUsername(user.getEmail())
-                .roles("PARISH_MEMBER")
-//                .authorities(grantedAuthorities)
                 .password(user.getPassword())
+                .authorities(grantedAuthorities) // Use extracted roles and authorities
                 .build();
     }
 }
